   * empty user_description now remains empty unless generate_description set
     (bug 8522).
   * set_variable has the key time=stamp now, to get a timestamp in milliseconds
   * move some terrain masks definition in [game_config]
   * made defense_weight work again for values > 0
   * fixed some minor bugs with "sighted" event, "die" event, and [kill]
 * user interface:
   * fixed a lag in the path rendering when there is a lot of units
   * maps smaller than the screen are now shown centered on the screen
   * the movement hint now display a "(1)" turn to reach, where the unit
     will have no moves left (distance, village or ZoC)
   * fixed bug with the number of turns to reach when crossing several ZoC
   * allow to choose the direction from where attacking, even when you
     are just near the enemy unit.
   * ability to view a list of MP servers with the Join Game dialog
   * fixed blinking tooltips when clock is updated (bug #9209)
   * footsteps are now erased at the end of the unit's move
   * reduced "sea sickness" effect when scrolling at accelerated speed
   * allow to select item in menu with right-click 
   * right-click outside of a cancelable dialog to close it
   * added experimental new background read comment before draw_background()
     in display.cpp
 * Miscellaneous and bugfixes
   * fix bug #4299: word wrap for menus with very long option strings
   * various bugfixes and code cleanups
   * removed zipios support
   * poisonned/stoned text is properly centered again
   * fixed various bugs with stoned units, now no moves left and blind.
   * fixed a bug causing instantaneous move of unit when using acceleration
   * fixed briefly invisible unit when scrolling to show a move
   * fixed an invalid letter in the random winter scenario
   * fixed a invalid memory access if a map has width of 0 (bug #9301)
   
Version 1.3.3:
 * campaigns:
   * Northern Rebirth
     * Completed Scenario 'Ray of Hope'.
   * Sceptre of Fire: